# vala-console

./: .gitignore  console.vala  meson.build  package.json  readme.md  spinner.vala  test.vala
charsets/: charset.vala
charsets/fun/: moon.vala
charsets/useful/: dots.vala
